Round board size to nearest pixel to prevent gaps between blocks.

--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -185,7 +185,6 @@
 }
 
 .snake-board {
-  height: 100%;
   margin: 0 auto;
   position: relative;
 }
